--- a/pom.xml
+++ b/pom.xml
@@ -14,8 +14,7 @@
 	</modules>
 
 	<properties>
-		<core.version>1.0.48</core.version>
-		<hitcore.version>1.0.27</hitcore.version>
+		<hitcore.version>1.0.28-SNAPSHOT</hitcore.version>
 		<additionalparam>-Xdoclint:none</additionalparam>
 		<java.version>1.8</java.version>
 		<resourcesValidation.version>1.0.1</resourcesValidation.version>
