--- a/pom.xml
+++ b/pom.xml
@@ -14,12 +14,12 @@
 	</modules>
 
 	<properties>
-		<hitcore.version>1.0.28</hitcore.version>
+		<hitcore.version>1.0.29-SNAPSHOT</hitcore.version>
 		<additionalparam>-Xdoclint:none</additionalparam>
 		<java.version>1.8</java.version>
 		<resourcesValidation.version>1.0.1</resourcesValidation.version>
-		<hl7v2Validation.version>1.4.2</hl7v2Validation.version>
-		<unifiedreport.version>1.0.8</unifiedreport.version>
+		<hl7v2Validation.version>1.5.0</hl7v2Validation.version>
+		<unifiedreport.version>1.0.9-SNAPSHOT</unifiedreport.version>
 	</properties>
 
 	<dependencies>
@@ -76,7 +76,7 @@
 		<dependency>
 			<groupId>gov.nist.hit.hl7</groupId>
 			<artifactId>profile-validation</artifactId>
-			<version>1.0.0</version>
+			<version>1.0.1-SNAPSHOT</version>
 			<exclusions>
 				<exclusion>
 					<groupId>gov.nist</groupId>
