--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>gov.nist.hit.core.hl7v2</groupId>
 	<artifactId>hit-core-hl7v2</artifactId>
-	<version>1.0.24-SNAPSHOT</version>
+	<version>1.0.24.IZTOOLNIST</version>
 	<name>hit-core-hl7v2</name>
 	<description>hit-core-hl7v2</description>
 	<packaging>pom</packaging>
@@ -14,11 +14,11 @@
 	</modules>
 
 	<properties>
-		<hitcore.version>1.0.29-SNAPSHOT</hitcore.version>
+		<hitcore.version>1.0.29.IZTOOLNIST</hitcore.version>
 		<additionalparam>-Xdoclint:none</additionalparam>
 		<java.version>1.8</java.version>
 		<resourcesValidation.version>1.0.1</resourcesValidation.version>
-		<hl7v2Validation.version>1.5.0</hl7v2Validation.version>
+		<hl7v2Validation.version>1.2.2</hl7v2Validation.version>
 		<unifiedreport.version>1.0.9-SNAPSHOT</unifiedreport.version>
 	</properties>
 
