--- a/pom.xml
+++ b/pom.xml
@@ -75,8 +75,8 @@
 		
 		<dependency>
 			<groupId>gov.nist.hit.hl7</groupId>
-			<artifactId>profile-validation</artifactId>
-			<version>1.5.3-SNAPSHOT</version>
+			<artifactId>xml-verification</artifactId>
+			<version>1.6.4-SNAPSHOT</version>
 			<exclusions>
 				<exclusion>
 					<groupId>gov.nist</groupId>
