--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
 		<additionalparam>-Xdoclint:none</additionalparam>
 		<java.version>1.8</java.version>
 		<resourcesValidation.version>1.0.1</resourcesValidation.version>
-		<hl7v2Validation.version>1.6.5-SNAPSHOT</hl7v2Validation.version>
+		<hl7v2Validation.version>1.6.2</hl7v2Validation.version>
 		<unifiedreport.version>1.0.10-SNAPSHOT</unifiedreport.version>
 	</properties>
 
