--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 	</modules>
 
 	<properties>
-		<hitcore.version>1.0.31.IZTOOLNIST-SNAPSHOT</hitcore.version>
+		<hitcore.version>1.0.31.IZTOOLNIST</hitcore.version>
 		<additionalparam>-Xdoclint:none</additionalparam>
 		<java.version>1.8</java.version>
 		<resourcesValidation.version>1.0.1</resourcesValidation.version>
@@ -166,12 +166,12 @@
 	<distributionManagement>
 		<repository>
 			<id>releases</id>
-			<url>https://hit-dev.nist.gov:9001/repository/releases</url>
+			<url>https://hit-nexus.nist.gov/repository/releases/</url>
 		</repository>
 		<snapshotRepository>
 			<id>snapshots</id>
 			<name>Internal Snapshots</name>
-			<url>https://hit-dev.nist.gov:9001/repository/snapshots</url>
+			<url>https://hit-nexus.nist.gov/repository/snapshots</url>
 		</snapshotRepository>
 	</distributionManagement>
 	<scm>
