--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,8 @@
 		<java.version>1.8</java.version>
 		<resourcesValidation.version>1.0.1</resourcesValidation.version>
 		<hl7v2Validation.version>1.6.4</hl7v2Validation.version>
-		<unifiedreport.version>1.0.10-SNAPSHOT</unifiedreport.version>
+		<hl7v2Validationutils.version>1.0.0</hl7v2Validationutils.version>
+		<unifiedreport.version>1.0.11-SNAPSHOT</unifiedreport.version>
 	</properties>
 
 	<dependencies>
@@ -66,12 +67,11 @@
             <version>${unifiedreport.version}</version>
         </dependency>
         
-        		<dependency>
+		<dependency>
 			<groupId>gov.nist.healthcare.resources</groupId>
 			<artifactId>validation</artifactId>
 			<version>${resourcesValidation.version}</version>
-		</dependency>
-		
+		</dependency>	
 		
 		<dependency>
 			<groupId>gov.nist.hit.hl7</groupId>
@@ -97,7 +97,11 @@
 			</exclusions>
 		</dependency>
 		
-        
+        <dependency>
+		 <groupId>gov.nist.hl7.v2.validation</groupId>
+		  <artifactId>hl7-v2-validation-utils</artifactId>
+		  <version>${hl7v2Validationutils.version}</version>
+		</dependency>
         
         
 	</dependencies>
