--- a/hit-core-hl7v2-service/pom.xml
+++ b/hit-core-hl7v2-service/pom.xml
@@ -8,7 +8,7 @@
 	<parent>
 		<groupId>gov.nist.hit.core.hl7v2</groupId>
 		<artifactId>hit-core-hl7v2</artifactId>
-		<version>1.0.25-LEGACY</version>
+		<version>1.0.26-LEGACY-SNAPSHOT</version>
 	</parent>
 
 	<dependencies>
