--- a/pom.xml
+++ b/pom.xml
@@ -14,13 +14,13 @@
 	</modules>
 
 	<properties>
-		<hitcore.version>1.0.29-SNAPSHOT</hitcore.version>
+		<hitcore.version>1.0.29</hitcore.version>
 		<additionalparam>-Xdoclint:none</additionalparam>
 		<java.version>1.8</java.version>
 		<resourcesValidation.version>1.0.1</resourcesValidation.version>
-		<hl7v2Validation.version>1.6.4</hl7v2Validation.version>
+		<hl7v2Validation.version>1.6.7</hl7v2Validation.version>
 		<hl7v2Validationutils.version>1.0.0</hl7v2Validationutils.version>
-		<unifiedreport.version>1.0.11-SNAPSHOT</unifiedreport.version>
+		<unifiedreport.version>1.0.11</unifiedreport.version>
 	</properties>
 
 	<dependencies>
