--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 	</modules>
 
 	<properties>
-		<hitcore.version>1.0.29</hitcore.version>
+		<hitcore.version>1.0.30-SNAPSHOT</hitcore.version>
 		<additionalparam>-Xdoclint:none</additionalparam>
 		<java.version>1.8</java.version>
 		<resourcesValidation.version>1.0.1</resourcesValidation.version>
@@ -122,8 +122,8 @@
 						<target>${java.version}</target>
 					</configuration>
 				</plugin>
-
-<plugin>
+	
+				<plugin>
 					<artifactId>maven-release-plugin</artifactId>
 					<version>2.3.2</version>
 					<configuration>
