--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>gov.nist.hit.core.hl7v2</groupId>
 	<artifactId>hit-core-hl7v2</artifactId>
-	<version>1.0.24-SNAPSHOT</version>
+	<version>1.0.25-SNAPSHOT</version>
 	<name>hit-core-hl7v2</name>
 	<description>hit-core-hl7v2</description>
 	<packaging>pom</packaging>
@@ -14,7 +14,7 @@
 	</modules>
 
 	<properties>
-		<hitcore.version>1.0.29-SNAPSHOT</hitcore.version>
+		<hitcore.version>1.0.30-SNAPSHOT</hitcore.version>
 		<additionalparam>-Xdoclint:none</additionalparam>
 		<java.version>1.8</java.version>
 		<resourcesValidation.version>1.0.1</resourcesValidation.version>
@@ -76,7 +76,7 @@
 		<dependency>
 			<groupId>gov.nist.hit.hl7</groupId>
 			<artifactId>xml-verification</artifactId>
-			<version>1.6.4-SNAPSHOT</version>
+			<version>1.6.5-SNAPSHOT</version>
 			<exclusions>
 				<exclusion>
 					<groupId>gov.nist</groupId>
@@ -103,6 +103,12 @@
 		  <version>${hl7v2Validationutils.version}</version>
 		</dependency>
         
+       <dependency>
+		    <groupId>org.apache.httpcomponents</groupId>
+		    <artifactId>httpclient</artifactId>
+		    <version>4.5.9</version>
+		</dependency>
+
         
 	</dependencies>
 
