--- a/hit-core-hl7v2-repo/pom.xml
+++ b/hit-core-hl7v2-repo/pom.xml
@@ -8,7 +8,7 @@
 	<parent>
 		<groupId>gov.nist.hit.core.hl7v2</groupId>
 		<artifactId>hit-core-hl7v2</artifactId>
-		<version>1.0.25-SNAPSHOT</version>
+		<version>1.0.25.ex-SNAPSHOT</version>
 	</parent>
  
 	<dependencies>
@@ -16,7 +16,7 @@
 		<dependency>
 			<groupId>gov.nist.hit.core.hl7v2</groupId>
 			<artifactId>hit-core-hl7v2-domain</artifactId>
-						<version>${project.version}</version>
+			<version>${project.version}</version>
 		</dependency>
 
 		<dependency>
