--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>gov.nist.hit.core.hl7v2</groupId>
 	<artifactId>hit-core-hl7v2</artifactId>
-	<version>1.0.25-SNAPSHOT</version>
+	<version>1.0.25.ex-SNAPSHOT</version>
 	<name>hit-core-hl7v2</name>
 	<description>hit-core-hl7v2</description>
 	<packaging>pom</packaging>
@@ -14,7 +14,7 @@
 	</modules>
 
 	<properties>
-		<hitcore.version>1.0.30-SNAPSHOT</hitcore.version>
+		<hitcore.version>1.0.30.ex-SNAPSHOT</hitcore.version>
 		<additionalparam>-Xdoclint:none</additionalparam>
 		<java.version>1.8</java.version>
 		<resourcesValidation.version>1.0.1</resourcesValidation.version>
@@ -129,7 +129,7 @@
 					</configuration>
 				</plugin>
 
-<plugin>
+				<plugin>
 					<artifactId>maven-release-plugin</artifactId>
 					<version>2.3.2</version>
 					<configuration>
