remove direct validation dependency Now get validation from unified report. Updated unified report dependency Start work on external validation

--- a/hit-core-hl7v2-api/pom.xml
+++ b/hit-core-hl7v2-api/pom.xml
@@ -1,4 +1,6 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>hit-core-hl7v2-api</artifactId>
 	<packaging>jar</packaging>
@@ -29,10 +31,12 @@
 					<version>2.9</version>
 					<configuration>
 						<additionalProjectnatures>
-							<projectnature>org.springframework.ide.eclipse.core.springnature</projectnature>
+							<projectnature>
+								org.springframework.ide.eclipse.core.springnature</projectnature>
 						</additionalProjectnatures>
 						<additionalBuildcommands>
-							<buildcommand>org.springframework.ide.eclipse.core.springbuilder</buildcommand>
+							<buildcommand>
+								org.springframework.ide.eclipse.core.springbuilder</buildcommand>
 						</additionalBuildcommands>
 						<downloadSources>true</downloadSources>
 						<downloadJavadocs>true</downloadJavadocs>
@@ -62,6 +66,11 @@
 			<artifactId>javax.servlet-api</artifactId>
 			<version>3.1.0</version>
 			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20250107</version>
 		</dependency>
 
 
