--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>gov.nist.hit.core.hl7v2</groupId>
 	<artifactId>hit-core-hl7v2</artifactId>
-	<version>1.0.25.ex-SNAPSHOT</version>
+	<version>1.1.0</version>
 	<name>hit-core-hl7v2</name>
 	<description>hit-core-hl7v2</description>
 	<packaging>pom</packaging>
@@ -14,11 +14,11 @@
 	</modules>
 
 	<properties>
-		<hitcore.version>1.0.30.ex-SNAPSHOT</hitcore.version>
+		<hitcore.version>1.1.0</hitcore.version>
 		<additionalparam>-Xdoclint:none</additionalparam>
 		<java.version>1.8</java.version>
 		<resourcesValidation.version>1.0.1</resourcesValidation.version>
-		<hl7v2Validation.version>1.7.0-SNAPSHOT</hl7v2Validation.version>
+<!--		<hl7v2Validation.version>1.7.0</hl7v2Validation.version>-->
 		<hl7v2Validationutils.version>1.0.0</hl7v2Validationutils.version>
 		<unifiedreport.version>1.1.0-SNAPSHOT</unifiedreport.version>
 	</properties>
