--- a/pom.xml
+++ b/pom.xml
@@ -14,12 +14,12 @@
 	</modules>
 
 	<properties>
-		<hitcore.version>1.1.0</hitcore.version>
+		<hitcore.version>1.1.2-SNAPSHOT</hitcore.version>
 		<additionalparam>-Xdoclint:none</additionalparam>
 		<java.version>1.8</java.version>
 		<resourcesValidation.version>1.0.1</resourcesValidation.version>
 		<hl7v2Validationutils.version>1.0.0</hl7v2Validationutils.version>
-		<unifiedreport.version>1.1.0</unifiedreport.version>
+		<unifiedreport.version>1.1.1-SNAPSHOT</unifiedreport.version>
 	</properties>
 
 	<dependencies>
