validation classification update

--- a/hit-core-hl7v2-service/src/main/resources/validationConfigurationTemplate.conf
+++ b/hit-core-hl7v2-service/src/main/resources/validationConfigurationTemplate.conf
@@ -7,9 +7,11 @@ report {
     error         = "Error"
     warning       = "Warning"
     alert         = "Alert"
+    high-alert    = "High Alert"
     informational = "Informational"
     affirmative   = "Affirmative"
-    spec-error   = "Spec Error"
+    note          = "Validation Notes"
+    spec-error    = "Specification Error"     
   }
 
   # Detection categories
